:sparkles: :bug: Lazy Autowiring & Major bug fix
 - Added lazy auto-wiring support
 - Fixed an issue with occasional errors due to not finding Bean annotated method beans:
    Issue has been fixed by adding a resolver and an edge-case to DependencyTreeResolver
- Refactored package structure a little